<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_permissions_dialog_phone_state_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="@dimen/amnm_gap_large"
    android:layout_marginStart="@dimen/amnm_gap_large"
    android:background="@drawable/mirror_network_monitor_dialog_background"
    android:elevation="6dp"
    android:paddingBottom="@dimen/amnm_gap_small">

    <TextView
        android:id="@+id/activity_permissions_dialog_phone_state_title"
        style="@style/amnm_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/amnm_gap_medium_large"
        android:layout_marginTop="@dimen/amnm_gap_medium"
        android:text="@string/mirror_network_monitor_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_permissions_dialog_phone_state_description"
        style="@style/amnm_dialog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/amnm_gap_medium_large"
        android:layout_marginStart="@dimen/amnm_gap_medium_large"
        android:layout_marginTop="@dimen/amnm_gap_medium"
        android:text="@string/mirror_network_monitor_dialog_phone_state_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_permissions_dialog_phone_state_title" />

    <Button
        android:id="@+id/activity_permissions_dialog_phone_state_next_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/amnm_gap_medium_large"
        android:layout_marginTop="@dimen/amnm_gap_medium"
        android:text="@string/mirror_network_monitor_dialog_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_permissions_dialog_phone_state_description" />

    <Button
        android:id="@+id/activity_permissions_dialog_phone_state_dismiss_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/amnm_gap_small"
        android:layout_marginTop="@dimen/amnm_gap_medium"
        android:text="@string/mirror_network_monitor_dialog_dismiss"
        app:layout_constraintEnd_toStartOf="@+id/activity_permissions_dialog_phone_state_next_btn"
        app:layout_constraintTop_toBottomOf="@+id/activity_permissions_dialog_phone_state_description" />

</android.support.constraint.ConstraintLayout>